JumpScript/tests/baselines/reference/parserForOfStatement14.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement14.jump(1,20): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement14.jump (1 errors) ====
    for (let [a, b] of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }